--- a/src/participa.html
+++ b/src/participa.html
@@ -35,7 +35,7 @@
             <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-eliblack">Missatge:</label>
             <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Escriu açí el teu missatge..."></textarea>
         
-            <a><button class="w-full text-[#212529] bg-[#fefcfc] border-2 border-[#212529] py-5 px-4 my-10 font-sans font-bold text-base no-underline shadow-[2px_2px_#212529,_inset_2px_2px_#fefcfc,_inset_1px_1px_#212529] transition-shadow duration-300 hover:shadow-[5px_5px_#212529,_inset_5px_5px_#fefcfc,_inset_1px_1px_#212529]">
+            <a><button class="btn-primary">
                 Enviar
               </button></a>
 
