--- a/src/guanyadors.html
+++ b/src/guanyadors.html
@@ -21,27 +21,27 @@
         </div>
         <div class="bg-white p-4 item">
           <img src="/src/assets/images/concursant2.png" alt="Marta López" class="w-full h-auto mb-4">
-          <h4 class="text-lg font-semibold">Marta López</h4>
+          <h4 class="text-xl font-semibold">Marta López</h4>
           <p class="text-left">Estima la cuina des de petita, Marta ha demostrat el seu talent en numeroses competicions culinaries.</p>
         </div>
         <div class="bg-white p-4 item">
           <img src="/src/assets/images/concursant3.png" alt="Pep Peris" class="w-full h-auto mb-4">
-          <h4 class="text-lg font-semibold">Pep Peris</h4>
+          <h4 class="text-xl font-semibold">Pep Peris</h4>
           <p class="text-left">Estima la cuina des de petita, Marta ha demostrat el seu talent en numeroses competicions culinaries.</p>
         </div>
         <div class="bg-white p-4 item">
           <img src="/src/assets/images/concursant4.png" alt="Marc Gonzalbo" class="w-full h-auto mb-4">
-          <h4 class="text-lg font-semibold">Marc Gonzalbo</h4>
+          <h4 class="text-xl font-semibold">Marc Gonzalbo</h4>
           <p class="text-left">Estima la cuina des de petita, Marta ha demostrat el seu talent en numeroses competicions culinaries.</p>
         </div>
         <div class="bg-white p-4 item">
           <img src="/src/assets/images/concursant5.png" alt="Anna Ferrer" class="w-full h-auto mb-4">
-          <h4 class="text-lg font-semibold">Anna Ferrer</h4>
+          <h4 class="text-xl font-semibold">Anna Ferrer</h4>
           <p class="text-left">Estima la cuina des de petita, Marta ha demostrat el seu talent en numeroses competicions culinaries.</p>
         </div>
         <div class="bg-white p-4 item">
           <img src="/src/assets/images/concursant6.png" alt="María Ortiz" class="w-full h-auto mb-4">
-          <h4 class="text-lg font-semibold">María Ortiz</h4>
+          <h4 class="text-xl font-semibold">María Ortiz</h4>
           <p class="text-left">Estima la cuina des de petita, Marta ha demostrat el seu talent en numeroses competicions culinaries.</p>
         </div>
       </div></div>
