cambios guanyadors update2

--- a/src/guanyadors.html
+++ b/src/guanyadors.html
@@ -16,7 +16,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="bg-white p-4 item text--apple-system">
           <img src="/src/assets/images/concursant1.png" alt="Carlos Gimenez" class="w-full h-auto mb-4">
-          <h4 class="text-lg font-semibold">Carlos Gimenez</h4>
+          <h4 class="text-xl font-semibold">Carlos Gimenez</h4>
           <p class="text-left">Estima la cuina des de petita, Marta ha demostrat el seu talent en numeroses competicions culinaries.</p>
         </div>
         <div class="bg-white p-4 item">
