--- a/src/participa.html
+++ b/src/participa.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<html>
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -33,11 +33,11 @@
             </div>
             <div class="mb-6 w-full">
             <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-eliblack">Missatge:</label>
-            <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Escriu açí el teu missatge..."></textarea>
+            <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 rounded-lg border border-gray-300 mb-10 focus:ring-blue-500 focus:border-blue-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Escriu açí el teu missatge..."></textarea>
         
-            <a><button class="btn-primary">
+            <a class="btn-primary">
                 Enviar
-              </button></a>
+              </a>
 
             </div>
 
