--- a/src/participa.html
+++ b/src/participa.html
@@ -25,7 +25,7 @@
                 </div>
             <div class="mb-6 w-full">
                 <label for="large-input" class="w-full block mb-2 text-sm font-medium text-gray-900 dark:text-eliblack">Teléfon:</label>
-                <input type="text" id="large-input" class="block w-full px-3 p-2 text-gray-900 border border-gray-300 rounded-lg text-base focus:ring-blue-500 focus:border-blue-500 dark:text-elidark dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Escriu el teu telefon">
+                <input type="text" id="large-input-1" class="block w-full px-3 p-2 text-gray-900 border border-gray-300 rounded-lg text-base focus:ring-blue-500 focus:border-blue-500 dark:text-elidark dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Escriu el teu telefon">
             </div> 
             <div class="mb-6 w-full">
                 <label for="large-input" class="w-full block mb-2 text-sm font-medium text-gray-900 dark:text-eliblack">Email:</label>
